--- a/frontend/Web/src/app/paciente/visualizar-perfil/visualizar-perfil.component.html
+++ b/frontend/Web/src/app/paciente/visualizar-perfil/visualizar-perfil.component.html
@@ -29,9 +29,12 @@
             </div>
 
             <div class="col-lg-3 col-md-3 text-md-end mt-3 mt-md-0">
-              <span class="badge bg-white text-dark fs-6 shadow-sm">
+              <span class="badge bg-white text-dark fs-6 shadow-sm d-block mb-2">
                 ID Paciente: {{ paciente?.id }}
               </span>
+              <button class="btn btn-primary" (click)="editarPerfil()">
+                <i class="fas fa-edit me-2"></i>Editar Perfil
+              </button>
             </div>
           </div>
         </div>
